styles/Project.module.css
.container {
    height: 100%;
    text-align: center;
    padding-top: 8rem;
    margin-bottom: 3rem;
}


.projTitle {
    font-size: 450%;
    color: var(--primary-color);
    padding: 1rem;
    border-bottom: solid 2px var(--secondary-color);
    font-family: Slim-Joe;
}

.projCardDiv {
    display: grid;
    grid-template-areas: 
        "proj1 proj2"
        "proj3 proj4"
        "proj5 proj6";
    grid-auto-columns: 1fr;
    grid-auto-rows: 1fr;
    grid-auto-flow: column;
    row-gap: 4rem;
    padding: 1rem;
    height: 100%;
    margin-top: 6rem;
    animation: fadeIn 3s ease;
}

.projBox {
    border: 2px solid #fff;
    height: 15rem;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    padding: 2rem;
    border-radius: 30px;
    transition: 200ms ease;
}

.projBox:hover {
    border: 2px solid var(--primary-color);
    box-shadow: 0 0 3rem var(--primary-color);
}

.projCard {
    margin: 3rem;
}

.projCardTitle {
    color: var(--primary-color);
    font-size: 300%;
    padding-bottom: 1rem;
    font-family: Slim-Joe;
    transition: 200ms ease;
}

.projCardDesc {
    color: var(--secondary-color);
    font-size: 160%;
    transition: 200ms ease;
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

@media screen and (max-width: 1025px) { 
    .projCardDiv {
        grid-template-areas: 
            "p1"
            "p2"
            "p3"
            "p4"
            "p5"
            "p6";
    }

    .projTitle {
        font-size: 250%;
    }

    .projCardTitle {
        font-size: 200%;
        padding-bottom: 0;
    }

    .projCardDesc {
        font-size: 130%;
        margin: 1rem;
    }

    .projCard {
        margin: 1rem auto 1rem auto;
    }

    .projBox {
        width: 80vw;
    }
}

